k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pong-service
spec:
  selector:
    app: pong
  ports:
    - protocol: TCP
      port: 80  # Puerto expuesto por el servicio
      targetPort: 8080  # Puerto en el que la aplicación está escuchando dentro del contenedor
  type: LoadBalancer  # Tipo de servicio, puede variar según tu entorno
