k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost  # El dominio al que apunta tu aplicación
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pong-service
                port:
                  number: 80
